[package]
name = "porg"
version = "0.1.0"
edition = "2021"
description = "CLI tool for organizing ePrint papers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
dirs = "5.0.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
scraper = "0.17.1"
url = "2.4.0"
